--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@ h1 {
 .settings {
   display: flex;
   justify-content: space-around;
+  font-size: 20px;
+  padding-top: 100px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .setTimer {
@@ -22,15 +26,18 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: blue;
 }
 
 .Timer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color:red;
 }
 
 .Controls {
   display: flex;
   justify-content: center;
+  padding: 50px;
 }
